# aio-lanraragi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: development.md
examples/: download_archive.py
integration_tests/: README.md  pyproject.toml
integration_tests/docs/: command_line.md  resource_management.md
integration_tests/scripts/: benchmark.py  generate_s1_dataset.py
integration_tests/src/aio_lanraragi_tests/: benchmarking.py  client.py  command.py  common.py  console.py  exceptions.py  helpers.py  log_parse.py  lrr_docker.py  lrr_environment_base.py  lrr_windows.py  placeholder.py  search_benchmark.py  utils.py
integration_tests/src/aio_lanraragi_tests/archive_generation/: archive.py  enums.py  metadata.py  models.py  page.py  utils.py
integration_tests/src/aio_lanraragi_tests/archive_generation/metadata/: zipf_utils.py
integration_tests/src/aio_lanraragi_tests/deployment/: __init__.py  base.py  container.py  docker.py  docker_lrrrs.py  docker_postgres.py  factory.py  homebrew.py  windows.py
integration_tests/src/aio_lanraragi_tests/registries/: __init__.py  base.py  local_registry.py
integration_tests/src/aio_lanraragi_tests/resources/s1/: dataset.json
integration_tests/src/aio_lanraragi_tests/s1/: __init__.py  models.py  utils.py
integration_tests/src/aio_lanraragi_tests/search_algorithm_testing/: __init__.py  data_generation.py  models.py
integration_tests/src/aio_lanraragi_tests/utils/: api_wrappers.py  concurrency.py  docker.py  flakes.py  playwright.py  version.py
integration_tests/tests/: conftest.py  test_auth.py  test_datatables.py  test_deployment.py  test_encoding.py  test_fs.py  test_index.py  test_log_parse.py  test_metadata_editor.py  test_metrics.py  test_openapi.py  test_playwright.py  test_plugins.py  test_reader.py  test_registry.py  test_s1_utils.py  test_search.py  test_simple.py  test_simple_windows.py  utils.py
integration_tests/tests/benchmark/: conftest.py  test_search_litmus.py
integration_tests/tests/registry/: conftest.py  test_default_registry.py  test_local_registry.py  test_ougi.py  test_plugin_config.py  test_plugin_lifecycle.py  test_plugin_ui.py  test_registry_crud.py
integration_tests/tests/resources/plugins/metadata/: InvalidPluginType.pm  PrependAnnotatedToTitle.pm
integration_tests/tests/search/: __init__.py  conftest.py  test_advanced.py  test_core.py  test_results.py
integration_tests/tests/simple/: __init__.py  conftest.py  test_edit.py  test_github_ratelimit.py  test_index.py  test_light.py  test_reader.py  test_search_advanced.py  test_search_core.py  test_search_results.py  test_security.py  test_stamps.py  test_with_archives.py
integration_tests/tests/simple/search/: test_advanced.py  test_composite.py  test_results.py  test_sort_untagged.py
integration_tests/tests/ui/: test_login.py
tests/: test_api_context.py  test_utils.py
(+42 files in other folders)
