[build-system]
requires = ["setuptools"]

[project]
name = "aio-lanraragi-integration-tests"
version = "0.1.7"
description = "Integration tests for aio-lanraragi"
requires-python = ">=3.12, <3.14"
dependencies = [
    "docker",
    "git-python",
    "numpy",
    "pillow",
    "pytest",
    "pytest-asyncio",
    "pytest-playwright-asyncio>=0.26.0",
    "redis"
]

[project.urls]
Homepage = "https://github.com/psilabs-dev/aio-lanraragi"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

# https://github.com/tortoise/tortoise-orm/issues/638#issuecomment-2466433657
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore:This process .* is multi-threaded:DeprecationWarning"
]

[tool.ruff]
extend-select = ["ASYNC", "C4", "SIM"]
show-fixes = true
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.package-data]
aio_lanraragi_tests = ["resources/**/*.ttf", "resources/**/*.txt"]