[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[project]
name = "aio-lanraragi-integration-tests"
version = "0.1.18"
description = "Integration tests for aio-lanraragi"
requires-python = ">=3.12, <=3.14"
dependencies = [
    "aio-lanraragi",
    "aiofiles",
    "docker",
    "git-python",
    "matplotlib",
    "numpy",
    "pillow",
    "playwright",
    "psutil",
    "pydantic>=2.0.0",
    "pytest",
    "pytest-asyncio",
    "pytest-rerunfailures",
    "redis"
]

[project.scripts]
lrr-staging = "aio_lanraragi_tests.console:console"

[project.urls]
Homepage = "https://github.com/psilabs-dev/aio-lanraragi"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Ignore warnings caused by Windows deployments spawning subprocesses.
    "ignore:subprocess .* is still running:ResourceWarning",
    "ignore:.*subprocess .* is still running.*:pytest.PytestUnraisableExceptionWarning",

    "ignore:This process .* is multi-threaded:DeprecationWarning",
    "error:Unclosed client session.*:ResourceWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
]
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%H:%M:%S"
log_format  = "[%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%H:%M:%S"

[tool.ruff]
lint.extend-select = ["ASYNC", "C4", "SIM"]
show-fixes = true
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.uv.sources]
aio-lanraragi = { workspace = true }

[tool.uv.build-backend]
module-name = "aio_lanraragi_tests"
source-include = ["src/aio_lanraragi_tests/resources/**"]
